// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`interaction snapshots > Enter selects the highlighted task and opens edit TUI 1`] = `
"                                                                                
  Edit Task MRKL-001                                                            
  ────────────────────────────────────────────────────────────                  
› Type            ◂ feat ▸                                                      
  Status            todo                                                        
  Priority          ⏫ 5-highest                                                 
  Title           Auth epic                                                     
  Description     ····················                                          
  Parent          type to search...                                             
  + Block         type to search...                                             
  + Add           ····················                                          
  ────────────────────────────────────────────────────────────                  
  ↑↓ navigate  ←→ cycle type/status/priority  Ctrl+N newline  Enter submit  Esc 
quit                                                                            "
`;

exports[`interaction snapshots > Tab key switches between Tasks and Archive 1`] = `
" Tasks   [Archive]                                                              
                                                                                
>                                                                               
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS          TITLE           │ Preview                           
────────────────────────────────────────────┼───────────────────────────────────
MRKL-099    closed ⏹️       Old feature     │ MRKL-099 feat closed               
                                            │   ⏹️ Priority: 3-normal            
                                            │ Old feature                       
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────
1/1 tasks  ↑↓: navigate  Tab: switch  Enter: select  Esc: quit  Type to search  "
`;

exports[`interaction snapshots > arrow down moves selection to next task 1`] = `
"[Tasks]   Archive                                                               
                                                                                
>                                                                               
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS          TITLE           │ Preview                           
────────────────────────────────────────────┼───────────────────────────────────
MRKL-001    todo ⏫          Auth epic       │ MRKL-002 fix in-progress          
MRKL-002    in-progress 🔼  Fix login bug   │   🔼 Priority: 4-high               
MRKL-003    todo 🔽         Auth tests      │ Fix login bug                      
MRKL-004    done ⏹️         Update CI conf… │                                    
MRKL-005    todo ⏹️         Dashboard layo… │                                    
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────
5/5 tasks  ↑↓: navigate  Tab: switch  Enter: select  Esc: quit  Type to search  "
`;

exports[`interaction snapshots > arrow up moves selection back to previous task 1`] = `
"[Tasks]   Archive                                                               
                                                                                
>                                                                               
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS          TITLE           │ Preview                           
────────────────────────────────────────────┼───────────────────────────────────
MRKL-001    todo ⏫          Auth epic       │ MRKL-001 feat todo                
MRKL-002    in-progress 🔼  Fix login bug   │   ⏫ Priority: 5-highest            
MRKL-003    todo 🔽         Auth tests      │ Auth epic                          
MRKL-004    done ⏹️         Update CI conf… │                                    
MRKL-005    todo ⏹️         Dashboard layo… │                                    
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────
5/5 tasks  ↑↓: navigate  Tab: switch  Enter: select  Esc: quit  Type to search  "
`;

exports[`interaction snapshots > initial render shows task list with first item selected 1`] = `
"[Tasks]   Archive                                                               
                                                                                
>                                                                               
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS          TITLE           │ Preview                           
────────────────────────────────────────────┼───────────────────────────────────
MRKL-001    todo ⏫          Auth epic       │ MRKL-001 feat todo                
MRKL-002    in-progress 🔼  Fix login bug   │   ⏫ Priority: 5-highest            
MRKL-003    todo 🔽         Auth tests      │ Auth epic                          
MRKL-004    done ⏹️         Update CI conf… │                                    
MRKL-005    todo ⏹️         Dashboard layo… │                                    
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────
5/5 tasks  ↑↓: navigate  Tab: switch  Enter: select  Esc: quit  Type to search  "
`;

exports[`interaction snapshots > typing characters filters the task list 1`] = `
"[Tasks]   Archive                                                               
                                                                                
>                                                                               
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS          TITLE           │ Preview                           
────────────────────────────────────────────┼───────────────────────────────────
MRKL-001    todo ⏫          Auth epic       │ MRKL-001 feat todo                
MRKL-002    in-progress 🔼  Fix login bug   │   ⏫ Priority: 5-highest            
MRKL-003    todo 🔽         Auth tests      │ Auth epic                          
MRKL-004    done ⏹️         Update CI conf… │                                    
MRKL-005    todo ⏹️         Dashboard layo… │                                    
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────
5/5 tasks  ↑↓: navigate  Tab: switch  Enter: select  Esc: quit  Type to search  "
`;

exports[`render snapshots > archive tab active snapshot at 80 cols 1`] = `
" Tasks   [Archive]                                                              
                                                                                
>                                                                               
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS          TITLE           │ Preview                           
────────────────────────────────────────────┼───────────────────────────────────
MRKL-020    closed ⏹️       Archived featu… │ MRKL-020 feat closed               
MRKL-021    done ⏹️         Old bugfix      │   ⏹️ Priority: 3-normal             
                                            │ Archived feature                  
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────
2/2 tasks  ↑↓: navigate  Tab: switch  Enter: select  Esc: quit  Type to search  "
`;

exports[`render snapshots > basic task list snapshot at 80 cols 1`] = `
"[Tasks]   Archive                                                               
                                                                                
>                                                                               
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS          TITLE           │ Preview                           
────────────────────────────────────────────┼───────────────────────────────────
MRKL-001    todo ⏫          Add user authe… │ MRKL-001 feat todo                
├─MRKL-004    todo 🔽         Design dashb… │   ⏫ Priority: 5-highest            
MRKL-002    in-progress 🔼  Fix login redi… │ Add user authentication            
MRKL-003    done ⏹️         Update CI pipe… │                                    
MRKL-005    in-progress ⏬   Refactor token… │ Relationships                     
MRKL-006    todo ⏹️         Write integrat… │   Children: MRKL-004               
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────
6/6 tasks  ↑↓: navigate  Tab: switch  Enter: select  Esc: quit  Type to search  "
`;

exports[`render snapshots > blocking indicators snapshot at 80 cols 1`] = `
"[Tasks]   Archive                                                               
                                                                                
>                                                                               
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS          TITLE           │ Preview                           
────────────────────────────────────────────┼───────────────────────────────────
MRKL-010    todo ⏫🚧        Database migra… │ MRKL-010 feat todo                 
MRKL-011    todo 🔼🛑       API endpoints   │   ⏫ Priority: 5-highest             
MRKL-012    todo ⏹️🛑       Frontend integ… │ Database migration                  
                                            │                                   
                                            │ Relationships                     
                                            │   Blocks: MRKL-011, MRKL-012      
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────
3/3 tasks  ↑↓: navigate  Tab: switch  Enter: select  Esc: quit  Type to search  "
`;

exports[`render snapshots > empty task list snapshot at 40 cols 1`] = `
"[Tasks]   Archive                       
                                        
>                                       
──────────────────────┬─────────────────
ID          STATUS          TITL… │ Prev
iew                                     
──────────────────────┼─────────────────
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
──────────────────────┴─────────────────
0/0 tasks  ↑↓: navigate  Tab: switch  En"
`;

exports[`render snapshots > empty task list snapshot at 80 cols 1`] = `
"[Tasks]   Archive                                                               
                                                                                
>                                                                               
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS          TITLE           │ Preview                           
────────────────────────────────────────────┼───────────────────────────────────
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────
0/0 tasks  ↑↓: navigate  Tab: switch  Enter: select  Esc: quit  Type to search  "
`;

exports[`render snapshots > empty task list snapshot at 120 cols 1`] = `
"[Tasks]   Archive                                                                                                       
                                                                                                                        
>                                                                                                                       
──────────────────────────────────────────────────────────────────┬─────────────────────────────────────────────────────
ID          STATUS          TITLE                                 │ Preview                                             
──────────────────────────────────────────────────────────────────┼─────────────────────────────────────────────────────
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
──────────────────────────────────────────────────────────────────┴─────────────────────────────────────────────────────
0/0 tasks  ↑↓: navigate  Tab: switch  Enter: select  Esc: quit  Type to search                                          "
`;

exports[`render snapshots > epic grouping snapshot at 80 cols 1`] = `
"[Tasks]   Archive                                                               
                                                                                
>                                                                               
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS          TITLE           │ Preview                           
────────────────────────────────────────────┼───────────────────────────────────
MRKL-001    todo ⏹️         Auth epic       │ MRKL-001 feat todo                 
├─MRKL-002    in-progress ⏹️  Login page    │   ⏹️ Priority: 3-normal             
├─MRKL-003    todo ⏹️         Token refresh │ Auth epic                          
MRKL-004    done ⏹️         Fix CI pipeline │                                    
MRKL-005    todo ⏹️         Update README   │ Relationships                      
                                            │   Children: MRKL-002, MRKL-003    
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────
5/5 tasks  ↑↓: navigate  Tab: switch  Enter: select  Esc: quit  Type to search  "
`;

exports[`render snapshots > scroll offset snapshot at 80 cols 1`] = `
"[Tasks]   Archive                                                               
                                                                                
>                                                                               
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS          TITLE           │ Preview                           
────────────────────────────────────────────┼───────────────────────────────────
MRKL-004    todo ⏹️         Task number 4   │ MRKL-006 chore done                
MRKL-005    in-progress ⏹️  Task number 5   │   ⏹️ Priority: 3-normal             
MRKL-006    done ⏹️         Task number 6   │ Task number 6                      
MRKL-007    todo ⏹️         Task number 7   │                                    
MRKL-008    in-progress ⏹️  Task number 8   │                                    
MRKL-009    done ⏹️         Task number 9   │                                    
MRKL-010    todo ⏹️         Task number 10  │                                    
MRKL-011    in-progress ⏹️  Task number 11  │                                    
MRKL-012    done ⏹️         Task number 12  │                                    
MRKL-013    todo ⏹️         Task number 13  │                                    
MRKL-014    in-progress ⏹️  Task number 14  │                                    
MRKL-015    done ⏹️         Task number 15  │                                    
MRKL-016    todo ⏹️         Task number 16  │                                    
MRKL-017    in-progress ⏹️  Task number 17  │                                    
MRKL-018    done ⏹️         Task number 18  │                                    
────────────────────────────────────────────┴───────────────────────────────────
20/20 tasks  ↑↓: navigate  Tab: switch  Enter: select  Esc: quit  Type to search"
`;

exports[`render snapshots > title truncation snapshot at 40 cols 1`] = `
"[Tasks]   Archive                       
                                        
>                                       
──────────────────────┬─────────────────
ID          STATUS          TITL… │ Prev
iew                                     
──────────────────────┼─────────────────
MRKL-001    todo ⏹️         Implement use
r authentication with OAuth2 and SAM… │ 
MRKL-001 feat todo                      
MRKL-002    in-progress ⏹️  Fix critical 
production database connection poolin… │
   ⏹️ Priority: 3-normal                 
MRKL-003    done ⏹️         Refactor lega
cy notification service infrastructur… │
 Implement user authentication with OAut
h2 and SAML                             
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 "
`;
